sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value ecart
  ecart=(getNombreValeurs())/2
  ^AlgShellSort:4: error: not found: value ecart
  while(ecart>0){
        ^AlgShellSort:7: error: not found: value ecart
    var j =i-ecart
             ^